--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday</title>
+    <title>Birthday Calculator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Birthday</h1>
-    <script> src="js/scripts.js"</script>
+    <div class="container">
+        <div class="jumbotron">
+    <h1>Birthday Calculator</h1>
+    <p>This is an app that calculates a users age and gives out their Akan names</p>
+</div>
+</div>
+<h2>Akan Names</h2>
+<p>Akan names are derived from Ghanian culture.Children are frequently given their first name as the day in the week tey were born.</p>
+    <script src="js/scripts.js"></script>                                                                                                              
 </body>
 </html>
