--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
     <p>This is an app that calculates a users age and gives out their Akan names</p>
 </div>
 </div>
+<div class="row">
+    <div class="col-md-2">
+<div class="card">
+    <div class="card-body">
 <h2>Akan Names</h2>
-<p>Akan names are derived from Ghanian culture.Children are frequently given their first name as the day in the week tey were born.</p>
+<p>Akan names are derived from Ghanian culture.</p>
+<p>Children are frequently given their first name as the day in the week they were born.</p>
+<img src="images/download (7).jpeg" class="img-thumbnail" alt="...">
+    </div>
+</div>
     <script src="js/scripts.js"></script>                                                                                                              
 </body>
 </html>
