--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="jumbotron">
     <h1>Birthday Calculator</h1>
     <p>This is an app that calculates a users age and gives out their Akan names</p>
-</div>
+</div>  
 </div>
 <div class="row">
     <div class="col-md-2">
@@ -24,6 +24,12 @@
 <img src="images/download (7).jpeg" class="img-thumbnail" alt="...">
     </div>
 </div>
-    <script src="js/scripts.js"></script>                                                                                                              
+    <script src="js/scripts.js"></script> 
+    
+      </div>                                                                                         
 </body>
+<div class="card">
+    <div class="card-body">
+      <p>Happy Birthday</p>
+    </div>
 </html>
