--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-    <h1>Birthday Calculator</h1>
-    <p>This is an app that calculates a users age and gives out their Akan names</p>
-</div>  
+            <div class="card">
+                <div class="card-body">
+    <h1 class="bg-light">Birthday Calculator</h1>
+    <P>This is an app that calculates a users age and gives out their Akan names</P>
+</div> 
+</div> 
 </div>
-<div class="row">
-    <div class="col-md-2">
 <div class="card">
     <div class="card-body">
 <h2>Akan Names</h2>
@@ -24,8 +25,21 @@
 <img src="images/download (7).jpeg" class="img-thumbnail" alt="...">
     </div>
 </div>
+<div class="row">
+    <div class="col-md-8">
+<form>
+    <div class="mb-3">
+      <label for="input birthday" class="form-label">Input birthday</label>
+      <input type="birtday" class="form-control" id="birthday" aria-describedby="birthday">
+    </div>
+    <div class="mb-3">
+      <label for="Input gender" class="form-label">Input gender</label>
+      <input type="gender" class="form-control" id="gender">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+    </div>
     <script src="js/scripts.js"></script> 
-    
       </div>                                                                                         
 </body>
 <div class="card">
