--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="jumbotron">
             <div class="card">
                 <div class="card-body">
-    <h1 class="bg-light">Birthday Calculator</h1>
+    <h1>Birthday Calculator</h1>
     <P>This is an app that calculates a users age and gives out their Akan names</P>
 </div> 
 </div> 
@@ -28,7 +28,7 @@
 <div class="row">
     <div class="col-md-8">
 <form>
-    <div class="mb-3">
+    <div class="mb-3">        
       <label for="input birthday" class="form-label">Input birthday</label>
       <input type="birtday" class="form-control" id="birthday" aria-describedby="birthday">
     </div>
@@ -38,12 +38,12 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-    </div>
-    <script src="js/scripts.js"></script> 
-      </div>                                                                                         
+</div>
+      </div> 
+      <script src="js/scripts.js"></script>                                                                                       
 </body>
 <div class="card">
     <div class="card-body">
-      <p>Happy Birthday</p>
+      <h3>Happy Birthday</h3>
     </div>
 </html>
