--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </form>
 </div>
       </div> 
-      <script src="js/scripts.js"></script>                                                                                       
+      <script src="./js/scripts.js"></script>                                                                                       
 </body>
 <div class="card">
     <div class="card-body">
