--- a/index.html
+++ b/index.html
@@ -19,27 +19,37 @@
 </div>
 <div class="card">
     <div class="card-body">
-<h2>Akan Names</h2>
-<p>Akan names are derived from Ghanian culture.</p>
+        <h2>Akan Names</h2>
+        <p>Akan names are derived from Ghanian culture.</p>
 <p>Children are frequently given their first name as the day in the week they were born.</p>
 <img src="images/download (7).jpeg" class="img-thumbnail" alt="...">
   </div>
 </div>
+<p><span class="text">Try it out</p>
+    <h6>Select Gender</h6>
 <div class="row">
     <div class="col-md-8">
-<form>
-    <div class="mb-3">        
-      <label for="input birthday" class="form-label">Input birthday</label>
-      <input type="birtday" class="form-control" id="birthday" aria-describedby="birthday">
-    </div>
-    <div class="mb-3">
-      <label for="Input gender" class="form-label">Input gender</label>
-      <input type="gender" class="form-control" id="gender">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+        <div id="birthday">
+            
+            <input type="radio" id="male" name="birthday" value="male">
+            <label for="male">male</label>
+            <br>
+            <input type="radio" id="female" name="birthday" value="female">
+            <label for="female">Female</label>
+        </div>
 </div>
       </div> 
+      <br>
+      <label for="date">Day</label>
+      <input type="number" id="date" name="date" placeholders="01" min="1" max="31">
+      <label for="month">Month</label>
+      <input type="number" id="month" name="month" placeholders="02" min="1" max="12">
+      <label for="year">Year</label>
+      <input type="number" id="year" name="year" placeholders="1900"min="1900" max="2030">
+      <br>
+      <br>
+      <input type="submit" value="submit" id="submitButton" class="button"
+      onclick="verify();return false;">
       <script src="./js/scripts.js"></script>                                                                                       
 </body>
 <div class="card">
