--- a/index.html
+++ b/index.html
@@ -1,59 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday Calculator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <div class="jumbotron">
             <div class="card">
                 <div class="card-body">
-    <h1>Birthday Calculator</h1>
-    <P>This is an app that calculates a users age and gives out their Akan names</P>
-</div> 
-</div> 
-</div>
-<div class="card">
-    <div class="card-body">
-        <h2>Akan Names</h2>
-        <p>Akan names are derived from Ghanian culture.</p>
-<p>Children are frequently given their first name as the day in the week they were born.</p>
-<img src="images/download (7).jpeg" class="img-thumbnail" alt="...">
-  </div>
-</div>
-<p><span class="text">Try it out</p>
-    <h6>Select Gender</h6>
-<div class="row">
-    <div class="col-md-8">
-        <div id="birthday">
-            
-            <input type="radio" id="male" name="birthday" value="male">
-            <label for="male">male</label>
-            <br>
-            <input type="radio" id="female" name="birthday" value="female">
-            <label for="female">Female</label>
+                    <h1>Birthday Calculator</h1>
+                    <P>This is an app that calculates a users age and gives out their Akan names</P>
+                </div>
+            </div>
         </div>
-</div>
-      </div> 
-      <br>
-      <label for="date">Day</label>
-      <input type="number" id="date" name="date" placeholders="01" min="1" max="31">
-      <label for="month">Month</label>
-      <input type="number" id="month" name="month" placeholders="02" min="1" max="12">
-      <label for="year">Year</label>
-      <input type="number" id="year" name="year" placeholders="1900"min="1900" max="2030">
-      <br>
-      <br>
-      <input type="submit" value="submit" id="submitButton" class="button"
-      onclick="verify();return false;">
-      <script src="./js/scripts.js"></script>                                                                                       
+        <div class="card">
+            <div class="card-body">
+                <h2>Akan Names</h2>
+                <p>Akan names are derived from Ghanian culture.</p>
+                <p>Children are frequently given their first name as the day in the week they were born.</p>
+                <img src="images/download (7).jpeg" class="img-thumbnail" alt="...">
+            </div>
+        </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><span class="text">Try it out</p>
+                        <h6>Select Gender</h6>
+                        <div class="row">
+                            <div class="col-md-8">
+                                <div id="birthday">
+
+                                    <input type="radio" id="male" name="birthday" value="male">
+                                    <label for="male">male</label>
+                                    <br>
+                                    <input type="radio" id="female" name="birthday" value="female">
+                                    <label for="female">Female</label>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <label for="date">Day</label>
+                        <input type="number" id="date" name="date" placeholders="01" min="1" max="31">
+                        <label for="month">Month</label>
+                        <input type="number" id="month" name="month" placeholders="02" min="1" max="12">
+                        <label for="year">Year</label>
+                        <input type="number" id="year" name="year" placeholders="1900" min="1900" max="2030">
+                        <br>
+                        <br>
+                        <input type="submit" value="submit" id="submitButton" class="button"
+                            onclick="verify();return false;">
+                    </div>
+                    <script src="./js/scripts.js"></script>
 </body>
 <div class="card">
     <div class="card-body">
-      <h3>Happy Birthday</h3>
+        <h3>Happy Birthday</h3>
     </div>
 </html>
