--- a/index.html
+++ b/index.html
@@ -19,47 +19,45 @@
                     <P>This is an app that calculates a users age and gives out their Akan names</P>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
-                <h2>Akan Names</h2>
-                <p>Akan names are derived from Ghanian culture.</p>
-                <p>Children are frequently given their first name as the day in the week they were born.</p>
-                <img src="images/download (7).jpeg" class="img-thumbnail" alt="...">
+            <div class="card">
+                <div class="card-body">
+                    <h2>Akan Names</h2>
+                    <p>Akan names are derived from Ghanian culture.</p>
+                    <p>Children are frequently given their first name as the day in the week they were born.</p>
+                    <img src="images/download (7).jpeg" class="img-thumbnail" alt=""width="300" height="500">
+                </div>
             </div>
-        </div>
+            <div class="card">
+                <div class="card-body"></div>
+                <p><span class="text">Try it out</p>
+                <h6>Select Gender</h6>
                 <div class="row">
-                    <div class="col-md-6">
-                        <p><span class="text">Try it out</p>
-                        <h6>Select Gender</h6>
-                        <div class="row">
-                            <div class="col-md-8">
-                                <div id="birthday">
+                    <div class="col-md-8">
+                        <div id="birthday">
 
-                                    <input type="radio" id="male" name="birthday" value="male">
-                                    <label for="male">male</label>
-                                    <br>
-                                    <input type="radio" id="female" name="birthday" value="female">
-                                    <label for="female">Female</label>
-                                </div>
-                            </div>
+                            <input type="radio" id="male" name="birthday" value="male">
+                            <label for="male">male</label>
+                            <input type="radio" id="female" name="birthday" value="female">
+                            <label for="female">Female</label>
                         </div>
-                        <br>
-                        <label for="date">Day</label>
-                        <input type="number" id="date" name="date" placeholders="01" min="1" max="31">
-                        <label for="month">Month</label>
-                        <input type="number" id="month" name="month" placeholders="02" min="1" max="12">
-                        <label for="year">Year</label>
-                        <input type="number" id="year" name="year" placeholders="1900" min="1900" max="2030">
-                        <br>
-                        <br>
-                        <input type="submit" value="submit" id="submitButton" class="button"
-                            onclick="verify();return false;">
                     </div>
-                    <script src="./js/scripts.js"></script>
+                </div>
+                <br>
+                <label for="date">Day</label>
+                <input type="number" id="date" name="date" placeholders="01" min="1" max="31">
+                <label for="month">Month</label>
+                <input type="number" id="month" name="month" placeholders="02" min="1" max="12">
+                <label for="year">Year</label>
+                <input type="number" id="year" name="year" placeholders="1900" min="1900" max="2030">
+                <br>
+                <br>
+                <input type="submit" value="submit" id="submitButton" class="button" onclick="verify();return false;">
+            </div>
+            <script src="./js/scripts.js"></script>
 </body>
 <div class="card">
-    <div class="card-body">
-        <h3>Happy Birthday</h3>
-    </div>
+    <div class="card-body"></div>
+    <h3>Happy Birthday</h3>
+</div>
+
 </html>
