--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <h2>Akan Names</h2>
                     <p>Akan names are derived from Ghanian culture.</p>
                     <p>Children are frequently given their first name as the day in the week they were born.</p>
-                    <img src="images/download (7).jpeg" class="img-thumbnail" alt=""width="300" height="500">
+                    <img src="images/download (7).jpeg" class="img-thumbnail" alt="" width="300" height="500">
                 </div>
             </div>
             <div class="card">
                 <div class="card-body"></div>
-                <p><span class="text">Try it out</p>
-                <h6>Select Gender</h6>
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-2">
+                        <p><span class="text">Try it out</p>
+                        <h6>Select Gender</h6>
                         <div id="birthday">
 
                             <input type="radio" id="male" name="birthday" value="male">
@@ -56,8 +56,8 @@
             <script src="./js/scripts.js"></script>
 </body>
 <div class="card">
-    <div class="card-body"></div>
-    <h3>Happy Birthday</h3>
+    <div class="card-body">
+        <h3>Happy Birthday</h3>
+    </div>
 </div>
-
 </html>
