--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2>Akan Names</h2>
                     <p>Akan names are derived from Ghanian culture.</p>
                     <p>Children are frequently given their first name as the day in the week they were born.</p>
-                    <img src="images/download (7).jpeg" class="img-thumbnail" alt="" width="300" height="500">
+                    <img src="images/download (7).jpeg" class="img-thumbnail" alt="kids" width="500" height="700">
                 </div>
             </div>
             <div class="card">
