--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
                 <div class="card-body">
                     <h1>Birthday Calculator</h1>
                     <P>This is an app that calculates a users age and gives out their Akan names</P>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
+                    <br>
                     <h2>Akan Names</h2>
                     <p>Akan names are derived from Ghanian culture.</p>
                     <p>Children are frequently given their first name as the day in the week they were born.</p>
@@ -55,9 +52,11 @@
             </div>
             <script src="./js/scripts.js"></script>
 </body>
-<div class="card">
+<br>
+<div class="card 3">
     <div class="card-body">
         <h3>Happy Birthday</h3>
     </div>
 </div>
+
 </html>
