--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 <div class="card-body">
                     <h1>Birthday Calculator</h1>
                     <P>This is an app that calculates a users age and gives out their Akan names</P>
-                    <br>
+                </div>
+            </div>
+                    <div class="card">
+                        <div class="card-body">
                     <h2>Akan Names</h2>
                     <p>Akan names are derived from Ghanian culture.</p>
                     <p>Children are frequently given their first name as the day in the week they were born.</p>
